--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.20.0
   firebase_auth: ^4.12.0
+  flutter_map: ^6.0.1
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
