--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.12.0
   flutter_map: ^6.0.1
   url_launcher: ^6.2.1
+  cloud_firestore: ^4.12.1
 
 dev_dependencies:
   flutter_test:
