--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_map: ^6.0.1
   url_launcher: ^6.2.1
   cloud_firestore: ^4.12.1
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
