--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   url_launcher: ^6.2.1
   cloud_firestore: ^4.12.1
   geolocator: ^10.1.0
+  http: ^1.1.0
+  open_route_service: ^1.2.3
+  latlong2: ^0.9.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_animate: ^4.2.0+1
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
